<resources>
    <string name="app_name">Advance Calculator</string>
    <string name="enter_your_numbers">Enter your numbers</string>
    <string name="ac">AC</string>
    <string name="percent">%</string>
    <string name="backspace">BS</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="substract">-</string>
</resources>